--- a/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/m-bibliografia.bib
+++ b/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/m-bibliografia.bib
@@ -109,6 +109,12 @@ year={2023}
     school = {Universidad Del Valle de Guatemala},
     year   = {2020},
 }
+@phdthesis{gonzalez2010algoritmos,
+	title={Algoritmos de agrupamiento basados en densidad y validaci{\'o}n de clusters},
+	author={Gonz{\'a}lez, Damaris Pascual},
+	year={2010},
+	school={Universitat Jaume I}
+}
 
 @article{garcia2011feen,
   title={FEEN: Informe sociosantario FEEN sobre la epilepsia en España},
@@ -120,7 +126,23 @@ year={2023}
   year={2011},
   publisher={Elsevier}
 }
-
+@article{chameleon,
+	title={Chameleon: Hierarchical clustering using dynamic modeling},
+	author={Karypis, George and Han, Eui-Hong and Kumar, Vipin},
+	journal={computer},
+	volume={32},
+	number={8},
+	pages={68--75},
+	year={1999},
+	publisher={IEEE}
+}
+@article{pascual2007algoritmos,
+	title={Algoritmos de agrupamiento},
+	author={Pascual, D and Pla, F and S{\'a}nchez, S},
+	journal={M{\'e}todo Inform{\'a}ticos Avanzados},
+	pages={164--174},
+	year={2007}
+}
 @book{wyllie2006treatment,
   title={The treatment of epilepsy: principles \& practice},
   author={Wyllie, Elaine and Gupta, Ajay and Lachhwani, Deepak K},
@@ -241,4 +263,14 @@ year={2023}
   journal={Wiley encyclopedia of biomedical engineering},
   year={2006},
   publisher={John Wiley \& Sons, Inc. Hoboken, NJ, USA}
+}
+
+@inproceedings{VAT,
+	title={VAT: A tool for visual assessment of (cluster) tendency},
+	author={Bezdek, James C and Hathaway, Richard J},
+	booktitle={Proceedings of the 2002 International Joint Conference on Neural Networks. IJCNN'02 (Cat. No. 02CH37290)},
+	volume={3},
+	pages={2225--2230},
+	year={2002},
+	organization={IEEE}
 }
