--- a/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/0-datos_estudiante.tex
+++ b/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/0-datos_estudiante.tex
@@ -26,15 +26,15 @@
 % Datos del tribunal examinador:
 % -------------------------------------------------------------------------------
 % Nombre del primer examinador
-\def \nombreprimerex { -}
+\def \nombreprimerex {Dr. Gabriel Barrientos}
 % Nombre del segundo examinador
-\def \nombresegundoex { -}
+\def \nombresegundoex {M.Sc. Carlos Esquit}
 % Año de aprobación
-\def \anoaprobacion {-}
+\def \anoaprobacion {2024}
 % Mes de aprobación
-\def \mesaprobacion {- }
+\def \mesaprobacion {enero }
 % Día de aprobación
-\def \diaaprobacion {- }
+\def \diaaprobacion {13 }
 
 % Capítulos pre-definidos
 % -------------------------------------------------------------------------------
@@ -43,7 +43,7 @@
 \def \CAPprefacio {Prefacio}
 \def \CAPantecedentes {Antecedentes}
 \def \CAPalcance {Alcance}
-%\def \CAPanexos {Anexos}
+\def \CAPanexos {Anexos}
 %\def \CAPglosario {Glosario}
 
 % Formato y estilo de la plantilla
